--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 }
 
 html, body {
-  background-color: #1f1f20;
+  background-color: #1F1F20;
   color: #fff;
   min-height: 100vh;
   min-width: 100vw;
